--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="container">
       <header class="header">
         <h1>StudyPulse</h1>
-        <p>Track Your Rhythm, Reach Your Goals</p>
+        <p>Master Your Time, Master Your Goals</p>
       </header>
 
       <div class="stats-bar">
